fix layout bug

--- a/src/moviesapp/static/css/style.css
+++ b/src/moviesapp/static/css/style.css
@@ -5,7 +5,7 @@
 .movie {
     width: 730px;
     clear: both;
-    min-height: 145px;
+    min-height: 160px;
     border-width: 1px;
     border-style: solid;
     border-color: #ddd;
